--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <input type="text" name="uname" placeholder="Enter Username" required="">
             <p>Password:</p><br>
             <input type="password" name="pass" placeholder="Enter your password" required="">
-            <input type="submit" name="" value="Login">
+            <!-- <input type="submit" name="" value="Login"> -->
+            <a href="main.html">Login</a>
             <a href="register.html">Create an Account?</a>
         </form>
     </div>
