--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
       simple
     </title>
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <script src="https://kit.fontawesome.com/f045c1105a.js" crossorigin="anonymous"></script>
   </head>
   <body>
